# SearchSystem

./: .gitignore  CMakeLists.txt  README.md  config.ini
SearchEngine/: main.cpp
Spider/: main.cpp
